samples/nginx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1.17-deploy
  labels:
    app: nginx-1.17-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-1.17
  template:
    metadata:
      labels:
        app: nginx-1.17
    spec:
      containers:
      - name: nginx
        image: nginx:1.17
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1.16-deploy
  labels:
    app: nginx-1.16-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-1.16
  template:
    metadata:
      labels:
        app: nginx-1.16
    spec:
      containers:
      - name: nginx
        image: nginx:1.16
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx117svc
spec:
  selector:
    app: nginx-1.17
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx116svc
spec:
  selector:
    app: nginx-1.16
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
  - nginx
  http:
  - route:
    - destination:
        hosts: nginx
        subset: v1.17
      weight: 50
    - destination:
        hosts: nginx
        subset: v1.16
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dest-rule
spec:
  host: nginx
  subsets:
  - name: v1_17
    labels:
      version: v1.17-tls
  - name: v1_16
    labels:
      version: v1.17-tmp
