samples/nginx-virtual-service-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
  - port:
      name: my-http
      number: 82
      protocol: HTTP      
    hosts:
    - "*.hung.org.hk"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "nginx.hung.org.hk"
  gateways:
  - nginx-gateway  
  http:
  - route:
    - destination:
        host: nginx-svc
        subset: v117
      weight: 50
    - destination:
        host: nginx-svc
        subset: v116
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx-svc
  subsets:
  - name: v117
    labels:
      app: nginx
      version: "1.17"
  - name: v116
    labels:
      app: nginx
      version: "1.16"
