samples/tomcat-virtual-service.v0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tomcat
spec:
  hosts:
  - "*"
  gateways:
  - tomcat-gateway  
  http:
  - route:
    - destination:
        host: tomcat-v9-svc
      weight: 50
    - destination:
        host: tomcat-v85-svc
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tomcat-v9
spec:
  host: tomcat-v9-svc
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tomcat-v8.5
spec:
  host: tomcat-v8.5-svc
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tomcat-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
