samples/tomcat-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tomcat
spec:
  hosts:
  - "*"
  gateways:
  - tomcat-gateway  
  http:
  - route:
    - destination:
        host: tomcat-svc
        subset: v9
      weight: 50
    - destination:
        host: tomcat-svc
        subset: v85
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tomcat
spec:
  host: tomcat-svc
  subsets:
  - name: v9
    labels:
      pod: tomcat
      version: v9
  - name: v85
    labels:
      pod: tomcat
      version: v8.5
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tomcat-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - "*"
